@@ -24,6 +24,7 @@ Where "NUMBER" is the bug number.
  - Plugin API: Added selected flag to "users" list (Khisanth).
  - Made DCC resume handle case-insensitive file systems properly.
  - Fixed the flashing when you click on a colored treeview row.
+ - Fixed auto-completion during /exec -o [1375530].
  - 
  - 
  - 
